fixing alt elements and adding IG link

--- a/index.html
+++ b/index.html
@@ -12,36 +12,37 @@
     </header>
     <section id="gallery">
         <div class="image-container">
-            <img src="https://archive.org/download/photo_6257760358521487619_y/photo_6257760358521487608_y.jpg" alt="POV from the viewdeck of Banangan, Sablan">
+            <img src="https://archive.org/download/photo_6257760358521487619_y/photo_6257760358521487608_y.jpg" alt="Banangan, Sablan">
         </div>
         <div class="image-container">
-            <img src="https://archive.org/download/photo_6257760358521487619_y/photo_6257760358521487609_y.jpg" alt="Gov Pack Bus Terminal. Shot taken inside the Quantum of SM Baguio">
+            <img src="https://archive.org/download/photo_6257760358521487619_y/photo_6257760358521487609_y.jpg" alt="Gov Pack Bus Terminal">
         </div>
         <div class="image-container">
-            <img src="https://archive.org/download/photo_6257760358521487619_y/photo_6257760358521487611_y.jpg" alt="Random Shot of the sky.Its just so beautiful">
+            <img src="https://archive.org/download/photo_6257760358521487619_y/photo_6257760358521487611_y.jpg" alt="Random Shot of the sky">
         </div>
         <div class="image-container">
-            <img src="https://archive.org/download/photo_6257760358521487619_y/photo_6257760358521487612_y.jpg" alt="yesUCan. POV from the athletic bowl">
+            <img src="https://archive.org/download/photo_6257760358521487619_y/photo_6257760358521487612_y.jpg" alt="University of the Cordilleras">
         </div>
         <div class="image-container">
-            <img src="https://archive.org/download/photo_6257760358521487619_y/photo_6257760358521487613_y.jpg" alt="taken from Baler, Aurora, Philippines">
+            <img src="https://archive.org/download/photo_6257760358521487619_y/photo_6257760358521487613_y.jpg" alt="Baler, Aurora, Philippines">
         </div>
         <div class="image-container">
-            <img src="https://archive.org/download/photo_6257760358521487619_y/photo_6257760358521487614_y.jpg" alt="During my hiking era and one of my favorite view.">
+            <img src="https://archive.org/download/photo_6257760358521487619_y/photo_6257760358521487614_y.jpg" alt="Mountains">
         </div>
         <div class="image-container">
-            <img src="https://archive.org/download/photo_6257760358521487619_y/photo_6257760358521487615_y.jpg" alt="This is why I love hiking!">
+            <img src="https://archive.org/download/photo_6257760358521487619_y/photo_6257760358521487615_y.jpg" alt="Nature pic">
         </div>
         <div class="image-container">
-            <img src="https://archive.org/download/photo_6257760358521487619_y/photo_6257760358521487617_y.jpg" alt="This is from Aurora, very peaceful">
+            <img src="https://archive.org/download/photo_6257760358521487619_y/photo_6257760358521487617_y.jpg" alt="Baler, Aurora">
         </div>
         <div class="image-container">
             <img src="https://archive.org/download/photo_6257760358521487619_y/photo_6257760358521487618_y.jpg" alt="POV from viewdeck of Banangan, Sablan with the sunset">
         </div>
         <div class="image-container">
-            <img src="https://archive.org/download/photo_6257760358521487619_y/photo_6257760358521487619_y.jpg" alt="this is Bayokbok Waterfalls in Tublay, Benguet.">
+            <img src="https://archive.org/download/photo_6257760358521487619_y/photo_6257760358521487619_y.jpg" alt="Bayokbok Waterfalls in Tublay, Benguet.">
         </div>
     </section>
+    <p>Visit my <a id="iglink" href="https://www.instagram.com/pinicturaks/">Instagram</a> for more shots!</p>
     <footer>
         <p>© 2024 Jay Allen Jose. All rights reserved.</p>
     </footer>
