--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <img src="https://archive.org/download/photo_6257760358521487619_y/photo_6257760358521487609_y.jpg" alt="Gov Pack Bus Terminal">
         </div>
         <div class="image-container">
-            <img src="https://archive.org/download/photo_6257760358521487619_y/photo_6257760358521487611_y.jpg" alt="Random Shot of the sky">
+            <img src="https://archive.org/download/photo_6257760358521487619_y/photo_6257760358521487618_y.jpg" alt="POV from viewdeck of Banangan, Sablan with the sunset">
         </div>
         <div class="image-container">
             <img src="https://archive.org/download/photo_6257760358521487619_y/photo_6257760358521487612_y.jpg" alt="University of the Cordilleras">
@@ -36,13 +36,13 @@
             <img src="https://archive.org/download/photo_6257760358521487619_y/photo_6257760358521487617_y.jpg" alt="Baler, Aurora">
         </div>
         <div class="image-container">
-            <img src="https://archive.org/download/photo_6257760358521487619_y/photo_6257760358521487618_y.jpg" alt="POV from viewdeck of Banangan, Sablan with the sunset">
-        </div>
-        <div class="image-container">
             <img src="https://archive.org/download/photo_6257760358521487619_y/photo_6257760358521487619_y.jpg" alt="Bayokbok Waterfalls in Tublay, Benguet.">
         </div>
+        <div class="image-container">
+            <img src="https://archive.org/download/photo_6257760358521487619_y/photo_6257760358521487611_y.jpg" alt="Random Shot of the sky">
+        </div>
     </section>
-    <p>Visit my <a id="iglink" href="https://www.instagram.com/pinicturaks/">Instagram</a> for more shots!</p>
+    <p><center>Visit my <a id="iglink" href="https://www.instagram.com/pinicturaks/">Instagram</a> for more shots!</center></p>
     <footer>
         <p>© 2024 Jay Allen Jose. All rights reserved.</p>
     </footer>
