Finalized my gallery webpage

--- a/index.html
+++ b/index.html
@@ -42,7 +42,9 @@
             <img src="https://archive.org/download/photo_6257760358521487619_y/photo_6257760358521487611_y.jpg" alt="Random Shot of the sky">
         </div>
     </section>
-    <p><center>Visit my <a id="iglink" href="https://www.instagram.com/pinicturaks/">Instagram</a> for more shots!</center></p>
+    <section id="instagram">
+        <p><center>Visit my <a id="iglink" href="https://www.instagram.com/pinicturaks/">Instagram</a> for more shots!</center></p>
+    </section>
     <footer>
         <p>© 2024 Jay Allen Jose. All rights reserved.</p>
     </footer>
